package system.tms.Entities;

public class user {
}
